# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.419 2005/12/02 20:09:03 wolf31o2 Exp $

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_lock.py, modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,
  modules/stage1_target.py, modules/stage4_target.py,
  modules/tinderbox_target.py:
  So I was just kidding on that last commit.  This one is 2.0_rc4.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_lock.py, modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,
  modules/stage1_target.py, modules/stage2_target.py,
  modules/stage4_target.py, modules/tinderbox_target.py:
  Reverting my nasty spaces->tabs mess-up and pushing out 2.0_rc4 quickly.

  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.conf, modules/catalyst_lock.py,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/netboot_target.py, modules/stage1_target.py,
  modules/stage2_target.py, modules/stage4_target.py,
  modules/tinderbox_target.py, targets/stage1/stage1-controller.sh:
  Fixed spacing/tabs. Updated catalyst.conf comments. Added autoresume, md5,
  and sha to catalyst.conf by default. This is catalyst 2.0_rc3.

  02 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix autoresume for unpacking tarballs

  02 Dec 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/livecdfs-update.sh:
  remove gnap livecd-type per Koon's request
